# pokemony_blau

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
docs/: deploy-ubuntu-vps.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
monitor/: admin.py  apps.py  jobs.py  models.py  tests.py
monitor/management/: __init__.py
monitor/management/commands/: __init__.py  add_watch_target.py  check_watch_target.py  enqueue_due_checks.py  prime_pydoll_profile.py  run_pydoll_monitor.py
monitor/migrations/: 0001_initial.py  0002_alter_store_parser_type.py  0003_add_cloudflare_api_replay_parser_type.py  0004_offer_mapping_confirmed_canonical_identity.py  0005_add_shoper_front_api_parser_type.py
monitor/scrapers/: __init__.py  base.py  cloudflare_api_replay_woocommerce.py  generic.py  generic_woocommerce.py  pydoll_browser.py  registry.py  shoper_front_api.py
monitor/services/: __init__.py  availability.py  notifications.py  scheduler.py  scraper_runner.py
