[project]
name = "pokemony-blau"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "django>=6.0.6",
    "django-rq>=4.1.0",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "selectolax>=0.4.10",
]
